fixed text bug on smallest screen

--- a/src/components/Body/HomeBody.css
+++ b/src/components/Body/HomeBody.css
@@ -223,6 +223,7 @@ body {
 
 	#Home-Overview h1 {
 		font-size: 3.5em;
+		text-align: center;
 	}
 
 	#Home-Overview > .smallertext {
